--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "nodemon": "^2.0.15",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.3.0"
+  },
+  "devDependencies": {
+    "prettier": "2.6.0"
   }
 }
